# 360-v2

./: .dockerignore  .env.example  .gitignore  ACTIVE_CONTEXT.md  BRIEF_INTEGRITY.md  CLAUDE.md  Dockerfile  OWNER_BRIEF.md  README.md  SIGNAL_AUDIT_REPORT.md  clean_deploy.sh  deploy.sh  deploy_top50_vps.sh  deploy_vps.sh  docker-compose.yml  healthcheck.py  pyproject.toml  requirements.txt
comments/: pr_51.md
config/: __init__.py
data/: scanner_heartbeat
docs/: 360v2_full_audit.md  360v2_full_deep_report.md  360v2_pr_roadmap.md  ACTIVE_CONTEXT.md  AUDIT_2026-04-13_FREE_CHANNEL_WATCH_LIFECYCLE_REPORT.md  AUDIT_2026-04-13_ZERO_SIGNAL_DIAGNOSIS_GPT-5.4.md  AUDIT_2026-04-14_LIVE_SIGNAL_EXPRESSION_INVESTIGATION_GPT-5.3-CODEX.md  AUDIT_2026-04-14_LIVE_SIGNAL_EXPRESSION_INVESTIGATION_GPT-5.4.md  AUDIT_2026-04-14_REPORT_COMPARISON_AND_CANONICAL_VERDICT GPT 5.4.md  AUDIT_2026-04-16_EXECUTIVE_RUNTIME_BUSINESS_REVIEW_GPT-5.3-CODEX.md  AUDIT_2026-04-16_EXECUTIVE_RUNTIME_BUSINESS_REVIEW_GPT-5.4.md  AUDIT_2026-04-17_SCORING_ARCHITECTURE_CLAUDE-OPUS-4.6.md  AUDIT_2026-04-17_SCORING_ARCHITECTURE_GPT-5.3-CODEX.md  AUDIT_2026-04-17_SCORING_ARCHITECTURE_GPT-5.4.md  AUDIT_2026-04-20_MARKET_TRUTH_ALIGNMENT_SIGNAL_SUFFICIENCY_GPT-5.4.md  AUDIT_2026-04-20_MARKET_TRUTH_PATH_DATA_SUFFICIENCY_CLAUDE-OPUS-4.6.md  AUDIT_2026-04-20_MARKET_TRUTH_PATH_DATA_SUFFICIENCY_GPT-5.4.md  AUDIT_2026-04-22_DEEP_CODEBASE_AUDIT_CLAUDE-SONNET-4.6.md  AUDIT_PATH_SILENCE_QUALITY_DURATION_GEOMETRY_CLAUDE-SONNET-4-5.md  AUDIT_PATH_SILENCE_QUALITY_DURATION_GEOMETRY_CLAUDE-SONNET-4.md  OWNER_BRIEF_ARCHIVE.md  (+17 more)
(+315 files in other folders)
